k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: LoadBalancer #Gera um IP para acessar a APP de fora
  ports:
  - name: goserver-service
    port: 80
    targetPort: 8000
    protocol: TCP
