k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: ClusterIP #IP interno do servidor
  ports:
  - name: goserver-service
    port: 80 #porta do service
    targetPort: 8000 #porta do container - se não colocar nada, será o mesmo da porta
    protocol: TCP
